--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/language-service": "^11.2.0",
     "@nrwl/cli": "12.0.8",
     "@nrwl/cypress": "12.0.8",
+    "@nrwl/devkit": "12.0.8",
     "@nrwl/eslint-plugin-nx": "12.0.8",
     "@nrwl/jest": "12.0.8",
     "@nrwl/linter": "12.0.8",
