--- a/nx.json
+++ b/nx.json
@@ -1,30 +1,19 @@
 {
   "implicitDependencies": {
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     ".eslintrc.json": "*"
   },
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "npmScope": "myworkspace",
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
   "projects": {
-    "demo-app": {
-      "tags": []
-    },
-    "demo-app-e2e": {
-      "tags": [],
-      "implicitDependencies": ["demo-app"]
-    }
+    "demo-app": { "tags": [] },
+    "demo-app-e2e": { "tags": [], "implicitDependencies": ["demo-app"] },
+    "my-dal": { "tags": [] }
   }
 }
